# vkQuake3

./: .gitignore  CMakeLists.txt
code/: CMakeLists.txt
code/SDL2/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
code/SDL2/lib/cmake/SDL2/: sdl2-config.cmake
code/client/: cl_main.c
code/cmake/q3obj/: CMakeLists.txt
code/cmake/q3vkobj/: CMakeLists.txt
code/jpeg-8c/: CMakeLists.txt
code/qcommon/: common.c  net_ip.c  vm_armv7l.c
code/renderer_vulkan/: RB_DrawNormals.c  RB_DrawTris.c  RB_ShowImages.c  R_DebugGraphics.c  VKimpl.h  tr_cmds.c  tr_local.h  tr_shadows.c  tr_sky.c  vkExt.h  vk_cmd.c  vk_create_window_SDL.c  vk_frame.c  vk_init.c  vk_instance.c  vk_instance.h  vk_pipelines.c  vk_pipelines.h  vk_shade_geometry.c  vk_shade_geometry.h  vk_swapchain.c
code/renderer_vulkan/shaders/RpiAsm/: shaders.h
code/renderercommon/: tr_common.h
code/sdl/: CMakeLists.txt  inputHandler.c  inputHandler.h  sdl_gamma.c  sdl_glimp.c  sdl_input.c  sdl_snd.c
code/sys/: sys_loadlib.h  sys_local.h  sys_main.c  sys_unix.c
code/zlib/: CMakeLists.txt
