file(GLOB q3vkobj
	"../../renderer_vulkan/matrix_multiplication.c"
	"../../renderer_vulkan/tr_globals.c"
	"../../renderer_vulkan/tr_cvar.c"
	"../../renderer_vulkan/tr_animation.c"
	"../../renderer_vulkan/tr_bsp.c"
	"../../renderer_vulkan/tr_cmds.c"
	"../../renderer_vulkan/tr_curve.c"
	"../../renderer_vulkan/tr_fonts.c"
	"../../renderer_vulkan/tr_image.c"
	"../../renderer_vulkan/R_FindShader.c"
	"../../renderer_vulkan/R_ListShader.c"
	"../../renderer_vulkan/R_ImageProcess.c"
	"../../renderer_vulkan/tr_init.c"
	"../../renderer_vulkan/tr_light.c"
	"../../renderer_vulkan/tr_main.c"
	"../../renderer_vulkan/tr_marks.c"
	"../../renderer_vulkan/tr_mesh.c"
	"../../renderer_vulkan/tr_model.c"
	"../../renderer_vulkan/tr_model_iqm.c"
	"../../renderer_vulkan/RE_RegisterModel.c"
	"../../renderer_vulkan/R_ModelBounds.c"
	"../../renderer_vulkan/R_LoadMD3.c"
	"../../renderer_vulkan/R_LoadMDR.c"
	"../../renderer_vulkan/R_LerpTag.c"
	"../../renderer_vulkan/tr_noise.c"
	"../../renderer_vulkan/tr_scene.c"
	"../../renderer_vulkan/tr_shade.c"
	"../../renderer_vulkan/tr_shade_calc.c"
	"../../renderer_vulkan/tr_shader.c"
	"../../renderer_vulkan/tr_shadows.c"
	"../../renderer_vulkan/tr_sky.c"
	"../../renderer_vulkan/tr_surface.c"
	"../../renderer_vulkan/tr_flares.c"
	"../../renderer_vulkan/tr_fog.c"
	"../../renderer_vulkan/tr_world.c"
	"../../renderer_vulkan/vk_instance.c"
	"../../renderer_vulkan/vk_init.c"
	"../../renderer_vulkan/vk_cmd.c"
	"../../renderer_vulkan/vk_image.c"
	"../../renderer_vulkan/vk_image_sampler2.c"
	"../../renderer_vulkan/vk_pipelines.c"
	"../../renderer_vulkan/vk_frame.c"
	"../../renderer_vulkan/vk_swapchain.c"
	"../../renderer_vulkan/vk_screenshot.c"
	"../../renderer_vulkan/vk_shade_geometry.c"
	"../../renderer_vulkan/vk_depth_attachment.c"

	"../../renderer_vulkan/vk_shaders.c"
	"../../renderer_vulkan/shaders/Compiled/multi_texture_add_frag.c"
	"../../renderer_vulkan/shaders/Compiled/multi_texture_clipping_plane_vert.c"
	"../../renderer_vulkan/shaders/Compiled/multi_texture_mul_frag.c"
	"../../renderer_vulkan/shaders/Compiled/multi_texture_vert.c"
	"../../renderer_vulkan/shaders/Compiled/single_texture_clipping_plane_vert.c"
	"../../renderer_vulkan/shaders/Compiled/single_texture_frag.c"
	"../../renderer_vulkan/shaders/Compiled/single_texture_vert.c"

	"../../renderer_vulkan/R_StretchRaw.c"
	"../../renderer_vulkan/R_DebugGraphics.c"
	"../../renderer_vulkan/RB_ShowImages.c"
	"../../renderer_vulkan/RB_DrawNormals.c"
	"../../renderer_vulkan/RB_DrawTris.c"
	"../../renderer_vulkan/RB_SurfaceAnim.c"
	"../../renderer_vulkan/tr_backend.c"
	"../../renderer_vulkan/tr_Cull.c"
	"../../renderer_vulkan/glConfig.c"
	"../../renderer_vulkan/R_Parser.c"
	"../../renderer_vulkan/R_PortalPlane.c"
	"../../renderer_vulkan/R_PrintMat.c"

	"../../renderer_vulkan/R_LoadImage2.c"
	"../../renderer_vulkan/R_LoadImage.c"
	"../../renderer_vulkan/R_ImageJPG.c"
	"../../renderer_vulkan/R_ImageTGA.c"
	"../../renderer_vulkan/R_ImagePNG.c"
	"../../renderer_vulkan/R_ImageBMP.c"
	"../../renderer_vulkan/R_ImagePCX.c"

	"../../renderer_vulkan/ref_import.c"
	"../../renderer_vulkan/render_export.c"

	"../../renderer_vulkan/vk_create_window_SDL.c"

	"../../qcommon/q_shared.c"
	"../../qcommon/puff.c"
	"../../qcommon/q_math.c"

	"../../renderer_vulkan/QPUassembler/qpu_assembler.c"
)

add_library(renderer_vulkan_${ARCH_STRING} SHARED ${q3vkobj})
target_compile_options(renderer_vulkan_${ARCH_STRING} PRIVATE -Wall -Werror=implicit-function-declaration -std=c11 -march=${ARCH_STRING} -fPIC)

target_include_directories(renderer_vulkan_${ARCH_STRING} PUBLIC ../../jpeg-8c ../../ ../../renderer_vulkan/QPUassembler/)

target_link_libraries(renderer_vulkan_${ARCH_STRING} pthread dl m rt SDL2 jpeg-8c)
